# sleepy-locker

./: README.md  package.json  vite.config.ts
.github/workflows/: build.yaml
src/: App.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/examples/: sleep_prevent.rs
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  lock_hooks.rs  main.rs  sleep_prevent.rs  system_tray.rs
src/components/: SleepPreventSwitch.tsx  StartUpSwitch.tsx
